# Digital-Library

./: README.md
Client/: Book.cpp  Book.h  Borrow.cpp  Borrow.h  CMakeLists.txt  Commands.cpp  Commands.h  CommunicationManager.cpp  CommunicationManager.h  Member.cpp  Member.h  MessageParser.cpp  MessageParser.h  NetworkMessage.cpp  NetworkMessage.h  NetworkSettings.cpp  NetworkSettings.h  PureMessage.cpp  PureMessage.h  RequestResult.cpp  RequestResult.h  SyncTCPClient.cpp  SyncTCPClient.h  UIEntry.cpp  UIEntry.h  main.cpp
Server/: Book.cpp  Book.h  Borrow.cpp  Borrow.h  CMakeLists.txt  Member.cpp  Member.h  MessageParser.cpp  MessageParser.h  NetworkSetting.cpp  NetworkSetting.h  PureMessage.h  main.cpp
